feat: delete unused api create field
